--- a/GVirtual/GVirtual/GVirtualWindow.xaml
+++ b/GVirtual/GVirtual/GVirtualWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="GVirtual.GVirtualWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Window1" Height="768" Width="1024">
-    <Grid x:Name="LayoutRoot">
-        
-    </Grid>
+    Title="Window1"
+    WindowStyle="None"
+        WindowState="Maximized"
+        Topmost="True"
+        AllowsTransparency="True"
+        Background="Transparent"
+        KeyDown="Window_KeyDown">
+    <Canvas x:Name="LayoutRoot" Background="#10FFFFFF"/>
 </Window>
