--- a/GVirtual/GVirtual/MainWindow.xaml
+++ b/GVirtual/GVirtual/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="GVirtual.GVirtualWindow"
+﻿<Window x:Class="Main.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="Window1"
